# acl

./: .all-contributorsrc  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  acl.vcxproj  acl.vcxproj.filters  appveyor.yml  byte_offset_table_generator.py  make.py  shift_table_generator.py  sonar-project.properties
.github/: FUNDING.yml
cmake/: CMakeCompiler.cmake  CMakePlatforms.cmake  CMakeUtils.cmake  Toolchain-Android.cmake  Toolchain-iOS.cmake
docs/: README.md  acl_vs_ue4_vs_unity.md  additive_clips.md  algorithm_uniformly_sampled.md  cmu_performance.md  cmu_performance_history.md  compressing_a_raw_clip.md  compressing_raw_tracks.md  compressing_scalar_tracks.md  create_a_raw_clip.md  creating_a_raw_clip.md  creating_a_raw_track_list.md  creating_a_skeleton.md  database_support.md  decompressing_a_clip.md  decompressing_a_track_list.md  decompression_performance.md  default_sub_track_handling.md  error_metrics.md  fight_scene_performance.md  (+17 more)
tests/: CMakeLists.txt  unit_tests.sln  unit_tests.vcxproj  unit_tests.vcxproj.filters
tests/main_android/: AndroidManifest.xml  CMakeLists.txt
tests/main_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tests/main_android/app/src/main/java/com/acl/unit_tests/: MainActivity.java
tests/main_android/java/com/acl/: MainActivity.java
tests/main_android/java/com/acl/unit_tests/: MainActivity.java
tests/main_android/jni/: main.cpp
tests/main_android/res/values/: strings.xml
tests/main_emscripten/: CMakeLists.txt  main.cpp
tests/main_generic/: CMakeLists.txt  main.cpp
tests/main_ios/: CMakeLists.txt  main.cpp
tests/main_windows/: CMakeLists.txt
tests/sources/: catch2.impl.h  error_exceptions.h  main.cpp  test_core_ansi_allocator.cpp  test_core_bitset.cpp  test_core_memory.cpp  test_core_memory_utils.cpp  test_core_ptr_offset.cpp  test_core_string_view.cpp  test_core_utils.cpp  test_header_fwd.cpp  test_math_affine_matrix_32.cpp  test_math_affine_matrix_64.cpp  test_math_quat.cpp  test_math_quat_32.cpp  test_math_quat_64.cpp  test_math_transform_32.cpp  test_math_transform_64.cpp
tests/sources/compression/impl/: test_segment_streams.cpp
tests/sources/core/: test_ansi_allocator.cpp  test_bit_manip_utils.cpp  test_bitset.cpp  test_enum_utils.cpp  test_error_result.cpp  test_interpolation_utils.cpp  test_iterator.cpp  test_memory_utils.cpp  test_ptr_offset.cpp  test_string.cpp  test_string_view.cpp  test_time_utils.cpp  test_utils.cpp
tests/sources/io/: test_reader_writer.cpp
tests/sources/math/: test_affine_matrix.cpp  test_affine_matrix_32.cpp  test_quat.cpp  test_quat_32.cpp  test_quat_64.cpp  test_quat_packing.cpp  test_scalar.cpp  test_scalar_32.cpp  test_scalar_64.cpp  test_scalar_packing.cpp  test_transform.cpp  test_transform_32.cpp  test_transform_64.cpp  test_vector4.cpp  test_vector4_32.cpp  test_vector4_32_mix_0.cpp  test_vector4_32_mix_1.cpp  test_vector4_32_mix_a.cpp  test_vector4_32_mix_b.cpp  test_vector4_32_mix_c.cpp  test_vector4_32_mix_d.cpp  test_vector4_32_mix_w.cpp  test_vector4_32_mix_x.cpp  test_vector4_32_mix_y.cpp  test_vector4_32_mix_z.cpp  test_vector4_64.cpp  test_vector4_64_mix_0.cpp  test_vector4_64_mix_1.cpp  test_vector4_64_mix_a.cpp  test_vector4_64_mix_b.cpp  test_vector4_64_mix_c.cpp  test_vector4_64_mix_d.cpp  test_vector4_64_mix_w.cpp  test_vector4_64_mix_x.cpp  test_vector4_64_mix_y.cpp  test_vector4_64_mix_z.cpp  test_vector4_impl.h  test_vector4_packing.cpp
tests/validate_includes/: CMakeLists.txt  dummy.cpp  single_include.cpp.in
tools/acl_compressor/: CMakeLists.txt  README.md  acl_compressor.py  acl_compressor.sln  acl_compressor.vcxproj  acl_compressor.vcxproj.filters
tools/acl_compressor/includes/: acl_compressor.h  clip_01_01.h
tools/acl_compressor/main_android/: AndroidManifest.xml  CMakeLists.txt  build.xml
tools/acl_compressor/main_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tools/acl_compressor/main_android/app/src/main/java/com/acl/compressor/: MainActivity.java
tools/acl_compressor/main_android/java/com/acl/: MainActivity.java
tools/acl_compressor/main_android/java/com/acl/compressor/: MainActivity.java
tools/acl_compressor/main_android/jni/: main.cpp
tools/acl_compressor/main_android/res/values/: strings.xml
tools/acl_compressor/main_emscripten/: CMakeLists.txt  main.cpp
tools/acl_compressor/main_generic/: CMakeLists.txt  main.cpp
tools/acl_compressor/main_ios/: CMakeLists.txt
tools/acl_compressor/sources/: acl_compressor.cpp  clip_01_01_rotations.cpp  clip_01_01_skeleton.cpp  main.cpp  validate_database.cpp  validate_tracks.cpp
tools/acl_decompressor/: CMakeLists.txt  README.md  acl_decompressor.py  compare.py
tools/acl_decompressor/main_android/: CMakeLists.txt  build.xml
tools/acl_decompressor/main_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tools/acl_decompressor/main_android/app/src/main/java/com/acl/decompressor/: MainActivity.java
tools/acl_decompressor/main_android/java/com/acl/: MainActivity.java
tools/acl_decompressor/main_android/java/com/acl/decompressor/: MainActivity.java
tools/acl_decompressor/main_android/jni/: main.cpp
tools/acl_decompressor/main_android/res/values/: strings.xml
tools/acl_decompressor/main_generic/: CMakeLists.txt  main.cpp
tools/acl_decompressor/main_ios/: CMakeLists.txt  Info.plist.in  main.cpp
tools/acl_decompressor/sources/: benchmark.cpp  benchmark.h
tools/arithmetic_playground/: CMakeLists.txt
tools/arithmetic_playground/sources/: main.cpp
tools/regression_tester_android/: CMakeLists.txt  build.xml
tools/regression_tester_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tools/regression_tester_android/app/src/main/java/com/acl/regression_tests/: MainActivity.java
tools/regression_tester_android/java/com/acl/: MainActivity.java
tools/regression_tester_android/java/com/acl/regression_tests/: MainActivity.java
tools/regression_tester_android/jni/: main.cpp
tools/regression_tester_android/res/values/: strings.xml
tools/regression_tester_ios/: CMakeLists.txt  main.cpp
(+328 files in other folders)
